update to add INT

--- a/Starter Notebook with Examples.ipynb
+++ b/Starter Notebook with Examples.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e7a669de",
    "metadata": {},
    "outputs": [
@@ -47,17 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6e25b1e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from ESPN_FFL_API import points_by_stats_df"
+    "from ESPN_FFL_API import points_by_stats_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "81b78639",
    "metadata": {},
    "outputs": [
@@ -94,23 +94,23 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Spain without The S</td>\n",
-       "      <td>152.3</td>\n",
+       "      <td>152</td>\n",
        "      <td>I ❤️ Kickers and Defenses</td>\n",
-       "      <td>105.56</td>\n",
+       "      <td>105</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  week_num         winning_team winning_team_points  \\\n",
-       "1        1  Spain without The S               152.3   \n",
+       "   week_num         winning_team  winning_team_points  \\\n",
+       "1         1  Spain without The S                  152   \n",
        "\n",
-       "                 losing_team losing_team_points  \n",
-       "1  I ❤️ Kickers and Defenses             105.56  "
+       "                 losing_team  losing_team_points  \n",
+       "1  I ❤️ Kickers and Defenses                 105  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "dc52b7c6",
    "metadata": {},
    "outputs": [
@@ -169,31 +169,31 @@
        "      <td>8</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>299.36</td>\n",
-       "      <td>236.6</td>\n",
+       "      <td>299</td>\n",
+       "      <td>236</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>WIN</td>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         team_name draft_day_proj_rank current_proj_rank change_in_proj_rank  \\\n",
-       "3  Vocal Minority                   14                 8                   6   \n",
+       "         team_name  draft_day_proj_rank  current_proj_rank  \\\n",
+       "3  Vocal Minority                    14                  8   \n",
        "\n",
-       "  ranking points_for points_against games_back losses wins streak_length  \\\n",
-       "3       1     299.36          236.6          0      0    2             2   \n",
+       "   change_in_proj_rank  ranking  points_for  points_against  games_back  \\\n",
+       "3                    6        1         299             236           0   \n",
        "\n",
-       "  streak_type waiver_rank  \n",
-       "3         WIN           5  "
+       "   losses  wins  streak_length streak_type  waiver_rank  \n",
+       "3       0     2              2         WIN            4  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7f720c23",
    "metadata": {},
    "outputs": [
@@ -257,14 +257,14 @@
        "</div>"
       ],
       "text/plain": [
-       "     team_name acquisitionBudgetSpent  budget_remaining acquisitions drops  \\\n",
-       "1  Superb Owls                     31                69            7     7   \n",
+       "     team_name  acquisitionBudgetSpent  budget_remaining  acquisitions  drops  \\\n",
+       "1  Superb Owls                      31                69             7      7   \n",
        "\n",
-       "  misc moveToActive trades  \n",
-       "1    0            6      1  "
+       "   misc  moveToActive  trades  \n",
+       "1     0             6       1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "6f4bd0cc",
    "metadata": {},
    "outputs": [
@@ -321,33 +321,33 @@
        "      <th>D/ST-500_549 Yds Allowed</th>\n",
        "      <th>136</th>\n",
        "      <th>198</th>\n",
-       "      <th>201</th>\n",
+       "      <th>K-FG 60+ yds</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Superb Owls</td>\n",
-       "      <td>597.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>343.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>597</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>343</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -356,27 +356,27 @@
       ],
       "text/plain": [
        "     team_name  Passing-Yds  Passing-TD  Passing-400+ Yds  \\\n",
-       "1  Superb Owls        597.0         6.0               0.0   \n",
+       "1  Superb Owls          597           6                 0   \n",
        "\n",
        "   Passing-2pt conversion**  Passing-INT  Rushing-Yds  Rushing-TD  \\\n",
-       "1                       0.0          0.0        343.0         5.0   \n",
+       "1                         0            0          343           5   \n",
        "\n",
        "   Rushing-2ptConversion  Rushing-40+yardTD  ...  128  \\\n",
-       "1                    0.0                0.0  ...  0.0   \n",
+       "1                      0                  0  ...    0   \n",
        "\n",
        "   D/ST-100_199 Yds Allowed  D/ST-200_299 Yds Allowed  \\\n",
-       "1                       0.0                       0.0   \n",
+       "1                         0                         0   \n",
        "\n",
        "   D/ST-350_399 Yds Allowed  D/ST-400_449 Yds Allowed  \\\n",
-       "1                       1.0                       0.0   \n",
+       "1                         1                         0   \n",
        "\n",
-       "   D/ST-450_499 Yds Allowed  D/ST-500_549 Yds Allowed  136  198  201  \n",
-       "1                       1.0                       0.0  0.0  0.0  0.0  \n",
+       "   D/ST-450_499 Yds Allowed  D/ST-500_549 Yds Allowed  136  198  K-FG 60+ yds  \n",
+       "1                         1                         0    0    0             0  \n",
        "\n",
        "[1 rows x 54 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,14 +385,6 @@
     "points_by_stats_df.drop('team_manager',inplace=True,axis=1)\n",
     "points_by_stats_df.head(1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dacc9237",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
