--- a/Starter Notebook with Examples.ipynb
+++ b/Starter Notebook with Examples.ipynb
@@ -163,34 +163,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Vocal Minority</td>\n",
-       "      <td>14</td>\n",
-       "      <td>8</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Regretful Friend Choices</td>\n",
        "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>299</td>\n",
-       "      <td>236</td>\n",
+       "      <td>553</td>\n",
+       "      <td>481</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>WIN</td>\n",
        "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>WIN</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         team_name  draft_day_proj_rank  current_proj_rank  \\\n",
-       "3  Vocal Minority                    14                  8   \n",
+       "                  team_name  draft_day_proj_rank  current_proj_rank  \\\n",
+       "6  Regretful Friend Choices                    6                  3   \n",
        "\n",
        "   change_in_proj_rank  ranking  points_for  points_against  games_back  \\\n",
-       "3                    6        1         299             236           0   \n",
+       "6                    3        1         553             481           0   \n",
        "\n",
        "   losses  wins  streak_length streak_type  waiver_rank  \n",
-       "3       0     2              2         WIN            4  "
+       "6       0     4              4         WIN           14  "
       ]
      },
      "execution_count": 5,
@@ -244,12 +244,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Superb Owls</td>\n",
-       "      <td>31</td>\n",
-       "      <td>69</td>\n",
-       "      <td>7</td>\n",
-       "      <td>7</td>\n",
+       "      <td>59</td>\n",
+       "      <td>41</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
        "      <td>0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>15</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -258,10 +258,10 @@
       ],
       "text/plain": [
        "     team_name  acquisitionBudgetSpent  budget_remaining  acquisitions  drops  \\\n",
-       "1  Superb Owls                      31                69             7      7   \n",
+       "1  Superb Owls                      59                41            11     11   \n",
        "\n",
        "   misc  moveToActive  trades  \n",
-       "1     0             6       1  "
+       "1     0            15       1  "
       ]
      },
      "execution_count": 6,
@@ -312,7 +312,7 @@
        "      <th>Rushing-2ptConversion</th>\n",
        "      <th>Rushing-40+yardTD</th>\n",
        "      <th>...</th>\n",
-       "      <th>128</th>\n",
+       "      <th>D/ST-Less Than 100 Yds Allowed</th>\n",
        "      <th>D/ST-100_199 Yds Allowed</th>\n",
        "      <th>D/ST-200_299 Yds Allowed</th>\n",
        "      <th>D/ST-350_399 Yds Allowed</th>\n",
@@ -320,7 +320,7 @@
        "      <th>D/ST-450_499 Yds Allowed</th>\n",
        "      <th>D/ST-500_549 Yds Allowed</th>\n",
        "      <th>136</th>\n",
-       "      <th>198</th>\n",
+       "      <th>K-FG 50+ yds</th>\n",
        "      <th>K-FG 60+ yds</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -328,22 +328,22 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Superb Owls</td>\n",
-       "      <td>597</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1044</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>343</td>\n",
-       "      <td>5</td>\n",
+       "      <td>496</td>\n",
+       "      <td>7</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -356,22 +356,25 @@
       ],
       "text/plain": [
        "     team_name  Passing-Yds  Passing-TD  Passing-400+ Yds  \\\n",
-       "1  Superb Owls          597           6                 0   \n",
+       "1  Superb Owls         1044           9                 0   \n",
        "\n",
        "   Passing-2pt conversion**  Passing-INT  Rushing-Yds  Rushing-TD  \\\n",
-       "1                         0            0          343           5   \n",
+       "1                         0            0          496           7   \n",
        "\n",
-       "   Rushing-2ptConversion  Rushing-40+yardTD  ...  128  \\\n",
-       "1                      0                  0  ...    0   \n",
+       "   Rushing-2ptConversion  Rushing-40+yardTD  ...  \\\n",
+       "1                      0                  0  ...   \n",
        "\n",
-       "   D/ST-100_199 Yds Allowed  D/ST-200_299 Yds Allowed  \\\n",
-       "1                         0                         0   \n",
+       "   D/ST-Less Than 100 Yds Allowed  D/ST-100_199 Yds Allowed  \\\n",
+       "1                               0                         0   \n",
        "\n",
-       "   D/ST-350_399 Yds Allowed  D/ST-400_449 Yds Allowed  \\\n",
-       "1                         1                         0   \n",
+       "   D/ST-200_299 Yds Allowed  D/ST-350_399 Yds Allowed  \\\n",
+       "1                         1                         1   \n",
        "\n",
-       "   D/ST-450_499 Yds Allowed  D/ST-500_549 Yds Allowed  136  198  K-FG 60+ yds  \n",
-       "1                         1                         0    0    0             0  \n",
+       "   D/ST-400_449 Yds Allowed  D/ST-450_499 Yds Allowed  \\\n",
+       "1                         0                         2   \n",
+       "\n",
+       "   D/ST-500_549 Yds Allowed  136  K-FG 50+ yds  K-FG 60+ yds  \n",
+       "1                         0    0             0             0  \n",
        "\n",
        "[1 rows x 54 columns]"
       ]
